<resources>
    <string name="app_name">My Application</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="otp">OTP</string>
    <string name="email">Email</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">sign up</string>
    <string name="have_account">Have Account?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="gender_label">Gender</string>
    <string name="fragment1">Gallery</string>
    <string name="fragment2">Search</string>
    <string name="fragment3">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="student_qualification">Qualification</string>
    <string name="student_phone_number">Enter phone number</string>
    <string name="student_address">Enter Address</string>
    <string name="enter_student_email">Enter Email</string>
    <string name="enter_student_name">Enter Name</string>
    <string name="add_to_database">Add to DataBase</string>
    <string name="read_to_database">Read Data</string>

    <string name="add_details">ADD</string>

    <string name="contacts_list">Contacts</string>
    <string name="no_contacts_list">NO Contacts Available</string>
    <string name="permission">permission</string>
    <string name="recyclerview_demo">RecyclerView Demo</string>
    <string name="apis_demo">Apis Demo</string>
    <string name="sqlite_demo">SQLite Demo</string>
    <string name="room_db">Room DB Demo</string>
    <string name="new_cp">new Content provider</string>
    <string name="not_found_image">not found image</string>
    <string name="update_data">UPDATE DATA</string>
    <string name="add_records">add records</string>

    <string name="name_s">Student Name</string>f
    <string name="email_s">Student Email</string>
    <string name="address_s">Student Address</string>
    <string name="phone_number_s">Student Mobile No.</string>
    <string name="qualification_s">Student Qualification</string>
    <string name="save_btn">Save</string>
    <string name="update_btn">update</string>

    <string name="no_data">No Data Available</string>
    <string name="contact_info">Contact info</string>
    <string name="tvContacts">Contacts</string>
    <string name="video_call">Video call</string>
    <string name="more">More</string>
    <string name="mobile_india">Mobile | India</string>
    <string name="default_settings">Default Settings</string>
    <string name="qr_code">QR code</string>
    <string name="send_money">Send money</string>
    <string name="request_money">Request money</string>
    <string name="home">home</string>
    <string name="to_do_list_demo">To Do List Demo</string>

    <string name="to_do_name">Name</string>
    <string name="to_do_email">Email</string>
    <string name="to_do_password">Password</string>
    <string name="to_do_confirm_password">Confirm Password</string>
    <string name="to_do_register">Register</string>
    <string name="to_do_login">Login</string>
    <string name="already_have_account">Already have account?</string>
    <string name="create_account">Create Account?</string>
    <string name="save">save</string>
    <string name="logout">Logout</string>
    <string name="titles">Title</string>
    <string name="body">add content here.</string>
    <string name="no_notes_here">No Notes Here.</string>
    <string name="update_note">sorry, your note is not update, please try again</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_1_item">Delete 1 item?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="note">Notes</string>
    <string name="canvas_demo">Canvas Demo</string>
    <string name="map_demo">Map Demo</string>
    <string name="clear_draw">clear</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_type">Map type</string>
    <string name="map_details">Map details</string>

</resources>