<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".loginflow.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/blue">

        <TextView
            android:id="@+id/AppBarNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MyApp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:elevation="3dp"
        app:tabIndicator="@color/black"
        app:tabIndicatorHeight="3dp"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/white">


        <com.google.android.material.tabs.TabItem
            android:id="@+id/galleryTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/searchTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment2" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/settingTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment3" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>